k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template: 
    metadata: 
      labels:
        app: frontend

    spec:  
      containers:
      - name: frontend-pod
        image: deaddeal96/frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
